# get.cyrup.ai

./: .gitignore  .readthedocs.yaml  404.html  Cargo.toml  README.md  TASKLIST.md  book.toml  bootstrap.sh  index.html  introduction.html  introduction.md#what-it-does  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: deploy.yml  readthedocs.yml  setcyrup.yaml
.mdmirror/.OZ/: ARCHITECTURE.md  CONVENTIONS.md  SCRATCHPAD.md  TASKLIST.md
docs/: ARCHITECTURE.md  SUMMARY.md  book.toml  conf.py  introduction.md
docs/assets/: bootstrap.sh
docs/assets/.devcontainer/: .gitignore  Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  generate-hostname.sh
docs/assets/.devcontainer/.config/alacritty/: alacritty.toml  dracula_pro.toml
docs/assets/.devcontainer/.config/coder/: PYTHON_CONVENTIONS.md  RUST_CONVENTIONS.md  SHELL_CONVENTIONS.md  SQL_CONVENTIONS.md  WHEN_IN_ROME_CONVENTIONS.md.j2
docs/assets/.devcontainer/.config/gh/: config.yml  (+1 more)
docs/assets/.devcontainer/setupenv/: .gitignore  setup.fish  setup.nu  setup.zsh
docs/assets/icon/: cyrup_mark_icns.icns
docs/src/: SUMMARY.md  introduction.md
guide/: installation.html  quick-start.html  requirements.html  troubleshooting.html
guide/installation/: amazon.html  macos.html  ubuntu.html
scripts/: setcyrup
src/: gpu.rs  lib.rs  main.rs  menu.rs  package_manager.rs  recipes.rs  recipes.rs.new  recipes_test.rs  secretrust.rs  setcyrup.rs  setup.rs  shell.rs  system.rs  ui.rs
src/package/: catalog.rs  manager.rs  mod.rs  recipe.rs  sys.rs
theme/: custom.css
(+11 files in other folders)
