[package]
name = "cyrup-install"
version = "0.1.0"
edition = "2021"
description = "Installer for Cyrup AI tools"
authors = ["Cyrup Engineering <eng@cyrup.ai>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
which = "4.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
axum = "0.6"
tracing-subscriber = "0.3"
whoami = "1.4"
clap = { version = "4.4", features = ["derive"] }
