[package]
name = "cyrup-sys"
version = "0.1.0"
edition = "2021"
description = "System installation and management for Cyrup AI"
authors = ["Cyrup Engineering <eng@cyrup.ai>"]
license = "MIT"

[[bin]]
name = "cyrup-sys"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
cyrup = { path = "../cyrup" }
secretrust = { path = "../secretrust" }
