[package]
name = "get_cyrup_ai"
version = "0.1.0"
edition = "2021"
description = "System installation and management for Cyrup AI"
authors = ["Dev Team <devteam@cyrup.ai>"]
license = "MIT"

[[bin]]
name = "setcyrup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
mdbook = "0.4.45"
once_cell = "1.20.3"
which = "7.0.2"
inquire = "0.7.5"
ratatui = "0.29.0"
crossterm = "0.28.1"
dirs = "6.0.0"

[dev-dependencies]
rust-script = "0.35.0"
